Twenty Thirteen: align comment "bypostauthor" star correctly, props taupecat. Fixes #23696.
git-svn-id: http://core.svn.wordpress.org/trunk@23630 1a063a9b-81f0-0310-95a4-ce76da25c4cd

--- a/wp-content/themes/twentythirteen/style.css
+++ b/wp-content/themes/twentythirteen/style.css
@@ -2258,6 +2258,7 @@ footer.entry-meta {
 
 .bypostauthor .fn:before {
 	content: "\f408";
+	vertical-align: text-top;
 }
 
 .comment-list .edit-link {
